# legged_perceptive

./: README.md
legged_perceptive_controllers/: CMakeLists.txt  legged_perceptive_controllers_plugins.xml  package.xml
legged_perceptive_controllers/config/: body_filter.yaml  convex_plane_decomposition.yaml  default.yaml  elevation_mapping.yaml  rviz.rviz  task.info
legged_perceptive_controllers/config/a1/: task.info
legged_perceptive_controllers/config/aliengo/: task.info
legged_perceptive_controllers/include/legged_perceptive_controllers/: FootHeightEstimation.h  FootPlacementController.h  PerceptiveController.h  SphereSdfController.h
legged_perceptive_controllers/include/legged_perceptive_controllers/synchronized_module/: PlanarTerrainReceiver.h
legged_perceptive_controllers/include/legged_perceptive_controllers/visualization/: FootPlacementVisualization.h  SphereVisualization.h
legged_perceptive_controllers/launch/: elevation_mapping.launch  load_controller.launch
legged_perceptive_controllers/src/: FootHeightEstimation.cpp  FootPlacementController.cpp  PerceptiveController.cpp  SphereSdfController.cpp
legged_perceptive_controllers/src/synchronized_module/: PlanarTerrainReceiver.cpp
legged_perceptive_controllers/src/visualization/: FootPlacementVisualization.cpp  SphereVisualization.cpp
legged_perceptive_controllers/test/: MapPublisher.cpp
legged_perceptive_description/: CMakeLists.txt  package.xml
legged_perceptive_description/config/: HighAccuracyPreset.json  mid360.json
legged_perceptive_description/launch/: empty_world.launch  mid360.launch  unitree_hw.launch
legged_perceptive_description/urdf/: gazebo_d400.xacro  mid360.xacro  robot.xacro  sensor_d435.xacro  sensor_t265.xacro
legged_perceptive_interface/: CMakeLists.txt  package.xml
legged_perceptive_interface/include/legged_perceptive_interface/: ConvexRegionSelector.h  LeggedInterface.h  LeggedPrecomputation.h  LeggedReferenceManager.h  PerceptiveLeggedInterface.h  PerceptiveLeggedPrecomputation.h  PerceptiveLeggedReferenceManager.h
legged_perceptive_interface/include/legged_perceptive_interface/constraint/: FootCollisionConstraint.h  FootPlacementConstraint.h  SphereSdfConstraint.h
legged_perceptive_interface/src/: ConvexRegionSelector.cpp  LeggedInterface.cpp  LeggedPrecomputation.cpp  LeggedReferenceManager.cpp  PerceptiveLeggedInterface.cpp  PerceptiveLeggedPrecomputation.cpp  PerceptiveLeggedReferenceManager.cpp
legged_perceptive_interface/src/constraint/: FootCollisionConstraint.cpp  FootPlacementConstraint.cpp  SphereSdfConstraint.cpp
legged_perceptive_interface/src/synchronized_module/: LeggedReferenceManager.cpp  PlanarTerrainReceiver.cpp
legged_perceptive_interface/src/visualization/: FootPlacementVisualization.cpp  SphereVisualization.cpp
sdf_controllers/: CMakeLists.txt  package.xml  sdf_controllers_plugins.xml
sdf_controllers/config/: default.yaml
sdf_controllers/include/sdf_controllers/: BaseSdfController.h  FootPlacementController.h  SphereSdfController.h
sdf_controllers/launch/: load_controller.launch
sdf_controllers/src/: BaseSdfController.cpp  FootPlacementController.cpp  SphereSdfController.cpp
sdf_interface/: CMakeLists.txt  package.xml
sdf_interface/include/sdf_interface/: BaseSdfConstraint.h  ConvexRegionSelector.h  GridMapReceiver.h  LeggedInterface.h  LeggedPrecomputation.h  PlanarTerrainReceiver.h  Sdf.h  SphereSdfConstraint.h  SphereVisualization.h
sdf_interface/include/sdf_interface/constraint/: FootPlacementConstraint.h  SphereSdfConstraint.h
sdf_interface/include/sdf_interface/synchronized_module/: LeggedReferenceManager.h  PlanarTerrainReceiver.h
sdf_interface/include/sdf_interface/visualization/: FootPlacementVisualization.h
sdf_interface/src/: BaseSdfConstraint.cpp  ConvexRegionSelector.cpp  FootPlacementConstraint.cpp  GridMapReceiver.cpp  LeggedInterface.cpp  LeggedPrecomputation.cpp  PlanarTerrainReceiver.cpp  SphereSdfConstraint.cpp  SphereVisualization.cpp
sdf_interface/src/constraint/: FootPlacementConstraint.cpp  SphereSdfConstraint.cpp
sdf_interface/src/synchronized_module/: LeggedReferenceManager.cpp  PlanarTerrainReceiver.cpp
sdf_interface/src/visualization/: FootPlacementVisualization.cpp  SphereVisualization.cpp
