<?xml version="1.0"?>
<package format="2">
    <name>legged_perceptive_controllers</name>
    <version>0.0.0</version>
    <description>legged_perceptive_controllers</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>

    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>controller_interface</depend>
    <depend>legged_perceptive_interface</depend>
    <depend>legged_controllers</depend>
    <depend>grid_map_ros</depend>

    <export>
        <controller_interface plugin="${prefix}/legged_perceptive_controllers_plugins.xml"/>
    </export>
</package>
